--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 				Quality Indicators for Firefox
 			</div>
 			<div style="position:absolute;right:10px;bottom:5px;color:white">
-				<img src="images/logo_dark.png" alt="Mozilla Metrics" title="Mozilla Metrics" />
+				<img src="images/logo_dark_min.png" alt="Mozilla Metrics" title="Mozilla Metrics" />
 			</div>
 			
 			<div id="copyright">
@@ -119,6 +119,8 @@
 		
 		<div class="dim"></div>
 		<div id="chart"></div>
+
+		<img src="images/fxlogo_top.png" id="top_logo" />
 
 		<script>
 		var images = [
