Link to landing page added

--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
 				Quality Indicators for Firefox
 			</div>
 			<div style="position:absolute;right:10px;bottom:5px;color:white">
-				<img src="images/logo_dark_min.png" alt="Mozilla Metrics" title="Mozilla Metrics" />
+				<a href="http://metrics.mozilla.com/metrics">
+					<img src="images/logo_dark_min.png" alt="Mozilla Metrics" title="Mozilla Metrics" />
+				</a>
 			</div>
 			
 			<div id="copyright">
