changed link to metrics preview

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 				Quality Indicators for Firefox
 			</div>
 			<div style="position:absolute;right:10px;bottom:5px;color:white">
-				<a href="http://metrics.mozilla.com/metrics">
+				<a href="http://metrics.mozilla.com/preview">
 					<img src="images/logo_dark_min.png" alt="Mozilla Metrics" title="Mozilla Metrics" />
 				</a>
 			</div>
