--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 			</div>
 			
 			<div id="copyright">
-				Mozilla Metrics, 2012 &nbsp;&middot;&nbsp; <a href="http://creativecommons.org/licenses/by-nc-sa/2.5/">CC BY-NC-SA 2.5</a> &nbsp;&middot;&nbsp; Background image courtesy of <a class="shadow" href="http://www.flickr.com/people/theaucitron/">theaucitron</a>
+				Ali Almossawi &middot; Mozilla Metrics &middot; November 2012 &nbsp;&middot;&nbsp; <a href="http://creativecommons.org/licenses/by-nc-sa/2.5/">CC BY-NC-SA 2.5</a> &nbsp;&middot;&nbsp; Background image courtesy of <a class="shadow" href="http://www.flickr.com/people/theaucitron/">theaucitron</a>
 			</div>
 		</div><!-- end #container -->
 		
